--- a/maluti_parameta.ipynb
+++ b/maluti_parameta.ipynb
@@ -130,6 +130,26 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2, ..., 20, 27,  1])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_postUser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
