--- a/model7/Model7.ipynb
+++ b/model7/Model7.ipynb
@@ -18,7 +18,15 @@
     "from keras.models import Model\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.utils import plot_model\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from keras.optimizers import Adam\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from keras.utils.np_utils import to_categorical\n",
+    "import keras.backend as K\n",
+    "from functools import partial\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
    ]
   },
   {
