--- a/model8/O_Model8.ipynb
+++ b/model8/O_Model8.ipynb
@@ -18,177 +18,15 @@
     "from keras.models import Model\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.utils import plot_model\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000\n",
-      "10000\n"
-     ]
-    }
-   ],
-   "source": [
-    "#ツイートのテキスト読み込み\n",
-    "test = open(\"extract_tweet.txt\", \"r\", encoding=\"utf-8\")\n",
-    "lines = test.readlines()\n",
-    "test.close()\n",
-    "print(len(lines))\n",
-    "\n",
-    "#ラベル読み込み\n",
-    "test = open(\"label.txt\", \"r\", encoding=\"utf-8\")\n",
-    "label = test.readlines()\n",
-    "test.close()\n",
-    "print(len(label))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000\n"
-     ]
-    }
-   ],
-   "source": [
-    "#userID\n",
-    "test = open(\"user.txt\",\"r\", encoding=\"utf-8\")\n",
-    "uID = test.readlines()\n",
-    "test.close()\n",
-    "print(len(uID))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "id_list = []\n",
-    "for i in uID:\n",
-    "    if i in id_list:\n",
-    "        continue\n",
-    "    else:\n",
-    "        id_list.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(id_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "post_user = []\n",
-    "for i in uID:\n",
-    "    for j in range(len(id_list)):\n",
-    "        if i == id_list[j]:\n",
-    "            post_user.append(j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_postUser = np.array(post_user)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 18881 unique tokens.\n",
-      "Shape of data tensor:(10000, 50)\n",
-      "Shape of label tensor:(10000, 2)\n"
-     ]
-    }
-   ],
-   "source": [
+    "import numpy as np\n",
+    "from keras.optimizers import Adam\n",
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
-    "import numpy as np\n",
     "from keras.utils.np_utils import to_categorical\n",
-    "\n",
-    "maxlen = 50\n",
-    "training_samples = 8000 # training data 80 : validation data 20\n",
-    "validation_samples = 1000\n",
-    "test_samples = len(lines) - (training_samples + validation_samples)\n",
-    "max_words = 20000\n",
-    "\n",
-    "# word indexを作成\n",
-    "tokenizer = Tokenizer(num_words=max_words)\n",
-    "tokenizer.fit_on_texts(lines)\n",
-    "sequences = tokenizer.texts_to_sequences(lines)\n",
-    "\n",
-    "word_index = tokenizer.word_index\n",
-    "print(\"Found {} unique tokens.\".format(len(word_index)))\n",
-    "\n",
-    "data = pad_sequences(sequences, maxlen=maxlen)\n",
-    "\n",
-    "# バイナリの行列に変換\n",
-    "categorical_labels = to_categorical(label)\n",
-    "labels = np.asarray(categorical_labels)\n",
-    "\n",
-    "print(\"Shape of data tensor:{}\".format(data.shape))\n",
-    "print(\"Shape of label tensor:{}\".format(labels.shape))\n",
-    "\n",
-    "#学習データとテストデータに分割\n",
-    "x1_test = data[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
-    "x2_test = n_postUser[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
-    "y_test = labels[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
-    "data = data[:training_samples + validation_samples]\n",
-    "labels = labels[:training_samples + validation_samples]\n",
-    "n_postUser = n_postUser[:training_samples + validation_samples]\n",
-    "\n",
-    "\n",
-    "# 行列をランダムにシャッフルする\n",
-    "indices = np.arange(data.shape[0])\n",
-    "np.random.shuffle(indices)\n",
-    "data = data[indices]\n",
-    "labels = labels[indices]\n",
-    "users = n_postUser[indices]\n",
-    "\n",
-    "x1_train = data[:training_samples]\n",
-    "x2_train = users[:training_samples]\n",
-    "y_train = labels[:training_samples]\n",
-    "x1_val = data[training_samples: training_samples + validation_samples]\n",
-    "x2_val = users[training_samples: training_samples + validation_samples]\n",
-    "y_val = labels[training_samples: training_samples + validation_samples]"
+    "import keras.backend as K\n",
+    "from functools import partial\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -268,12 +106,127 @@
     "def macro_f_measure(y_true, y_pred):\n",
     "    precision = macro_precision(y_true, y_pred)\n",
     "    recall = macro_recall(y_true, y_pred)\n",
-    "    return (2 * precision * recall) / (precision + recall + K.epsilon())"
+    "    return (2 * precision * recall) / (precision + recall + K.epsilon())\n",
+    "\n",
+    "def weight_variable(shape):\n",
+    "    return K.truncated_normal(shape, stddev = 0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20000\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20000 entries, 0 to 19999\n",
+      "Data columns (total 14 columns):\n",
+      "screen_name    20000 non-null object\n",
+      "user_id        20000 non-null float64\n",
+      "tweet_id       20000 non-null float64\n",
+      "tweet          20000 non-null object\n",
+      "tweet2         20000 non-null object\n",
+      "postdate       20000 non-null object\n",
+      "cos_day        20000 non-null float64\n",
+      "sin_day        20000 non-null float64\n",
+      "tag            20000 non-null object\n",
+      "image_url      20000 non-null object\n",
+      "image          20000 non-null int64\n",
+      "retweet        20000 non-null float64\n",
+      "tag2           6063 non-null object\n",
+      "user_id2       20000 non-null int64\n",
+      "dtypes: float64(5), int64(2), object(7)\n",
+      "memory usage: 2.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#データの読み込み\n",
+    "use_data = pd.read_csv(filepath_or_buffer=\"multi_data.csv\", encoding=\"utf_8\", sep=\",\")\n",
+    "print(len(use_data))\n",
+    "use_data.info()\n",
+    "#NaNデータの0埋め\n",
+    "use_data = use_data.fillna('0')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 20620 unique tokens.\n",
+      "Shape of data tensor:(20000, 50)\n",
+      "Shape of label tensor:(20000, 10)\n",
+      "Shape of label tensor:(20000,)\n",
+      "Shape of label tensor:(20000,)\n",
+      "Shape of label tensor:(20000, 2)\n",
+      "Shape of label tensor:(20000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxlen = 50\n",
+    "tag_maxlen = 10\n",
+    "train = 0.7\n",
+    "validation = 0.1\n",
+    "max_words = 20000\n",
+    "\n",
+    "#データをランダムにシャッフル\n",
+    "use_data_s = use_data.sample(frac=1, random_state=150)\n",
+    "\n",
+    "# word indexを作成\n",
+    "tokenizer = Tokenizer(num_words=max_words)\n",
+    "tokenizer.fit_on_texts(use_data_s['tweet2'])\n",
+    "tokenizer.fit_on_texts(use_data_s['tag2'])\n",
+    "sequences = tokenizer.texts_to_sequences(use_data_s['tweet2'])\n",
+    "sequences2 = tokenizer.texts_to_sequences(use_data_s['tag2'])\n",
+    "\n",
+    "word_index = tokenizer.word_index\n",
+    "print(\"Found {} unique tokens.\".format(len(word_index)))\n",
+    "\n",
+    "data = pad_sequences(sequences, maxlen=maxlen)\n",
+    "t_data =  pad_sequences(sequences2, maxlen=tag_maxlen)\n",
+    "\n",
+    "#user_idをnp行列に変換\n",
+    "post_user = np.array(use_data['user_id2'])\n",
+    "#imageをnp行列に変換\n",
+    "img = np.array(use_data['image'])\n",
+    "#sin,cosデータをまとめてnp行列へ\n",
+    "date = use_data_s[['cos_day','sin_day']]\n",
+    "p_date = date.values\n",
+    "\n",
+    "#ラベルをバイナリの行列に変換\n",
+    "categorical_labels = to_categorical(use_data_s['retweet'])\n",
+    "labels = np.asarray(categorical_labels)\n",
+    "\n",
+    "print(\"Shape of data tensor:{}\".format(data.shape))\n",
+    "print(\"Shape of label tensor:{}\".format(t_data.shape))\n",
+    "print(\"Shape of label tensor:{}\".format(post_user.shape))\n",
+    "print(\"Shape of label tensor:{}\".format(img.shape))\n",
+    "print(\"Shape of label tensor:{}\".format(labels.shape))\n",
+    "print(\"Shape of label tensor:{}\".format(p_date.shape))\n",
+    "\n",
+    "\n",
+    "indices = [int(len(labels) * n) for n in [train, train + validation]]\n",
+    "x1_train, x1_val, x1_test = np.split(data, indices)\n",
+    "x2_train, x2_val, x2_test = np.split(t_data, indices)\n",
+    "x3_train, x3_val, x3_test = np.split(post_user, indices)\n",
+    "x4_train, x4_val, x4_test = np.split(img, indices)\n",
+    "x5_train, x5_val, x5_test = np.split(p_date, indices)\n",
+    "y_train, y_val, y_test = np.split(labels, indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +298,7 @@
     "x = concatenate([p_input, t_input], name='merge1')\n",
     "em = Embedding(input_dim=20000, output_dim=60, input_length=60, name='Embedding')(x)\n",
     "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32, name='LSTM')(d_em)\n",
+    "lstm_out = LSTM(32, kernel_initializer=weight_variable, name='LSTM')(d_em)\n",
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "\n",
     "#3つ目のデータ学習\n",
@@ -366,7 +319,8 @@
     "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
     "\n",
     "model = Model(inputs=[p_input, t_input, u_input, i_input, d_input], outputs = output)\n",
-    "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
+    "optimizer = Adam(lr=1e-3)\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
     "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model8.png')\n",
     "\n",
@@ -375,59 +329,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 8000 samples, validate on 1000 samples\n",
+      "Train on 14000 samples, validate on 1999 samples\n",
       "Epoch 1/100\n",
-      "8000/8000 [==============================] - 8s 1ms/step - loss: 0.6003 - acc: 0.7268 - macro_precision: 0.7489 - macro_recall: 0.7222 - macro_f_measure: 0.7350 - val_loss: 0.4566 - val_acc: 0.8110 - val_macro_precision: 0.8335 - val_macro_recall: 0.8022 - val_macro_f_measure: 0.8175\n",
+      "14000/14000 [==============================] - 9s 612us/step - loss: 2.0583 - acc: 0.5002 - macro_precision: 0.5004 - macro_recall: 0.5003 - macro_f_measure: 0.5003 - val_loss: 1.1193 - val_acc: 0.4877 - val_macro_precision: 0.4718 - val_macro_recall: 0.4928 - val_macro_f_measure: 0.4815\n",
       "Epoch 2/100\n",
-      "8000/8000 [==============================] - 6s 751us/step - loss: 0.3621 - acc: 0.8555 - macro_precision: 0.8587 - macro_recall: 0.8539 - macro_f_measure: 0.8562 - val_loss: 0.4077 - val_acc: 0.8250 - val_macro_precision: 0.8245 - val_macro_recall: 0.8234 - val_macro_f_measure: 0.8239\n",
+      "14000/14000 [==============================] - 7s 494us/step - loss: 1.8625 - acc: 0.5021 - macro_precision: 0.5019 - macro_recall: 0.5020 - macro_f_measure: 0.5019 - val_loss: 0.8218 - val_acc: 0.4797 - val_macro_precision: 0.4700 - val_macro_recall: 0.4835 - val_macro_f_measure: 0.4765\n",
       "Epoch 3/100\n",
-      "8000/8000 [==============================] - 6s 759us/step - loss: 0.2574 - acc: 0.8982 - macro_precision: 0.9005 - macro_recall: 0.8975 - macro_f_measure: 0.8990 - val_loss: 0.4473 - val_acc: 0.8120 - val_macro_precision: 0.8120 - val_macro_recall: 0.8110 - val_macro_f_measure: 0.8115\n",
+      "14000/14000 [==============================] - 7s 487us/step - loss: 1.5962 - acc: 0.5054 - macro_precision: 0.5055 - macro_recall: 0.5052 - macro_f_measure: 0.5054 - val_loss: 0.8340 - val_acc: 0.5083 - val_macro_precision: 0.5110 - val_macro_recall: 0.5021 - val_macro_f_measure: 0.4880\n",
       "Epoch 00003: early stopping\n"
      ]
     }
    ],
    "source": [
-    "history = model.fit([x1_train, x2_train], y_train,\n",
+    "history = model.fit([x1_train, x2_train, x3_train, x4_train, x5_train], y_train,\n",
     "                    epochs=100, \n",
-    "                    batch_size=100,\n",
-    "                    validation_data=([x1_val, x2_val], y_val),\n",
+    "                    batch_size=256,\n",
+    "                    validation_data=([x1_val, x2_val, x3_val, x4_val, x5_val], y_val),\n",
     "                    callbacks=[early_stopping])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000/1000 [==============================] - 1s 895us/step\n",
-      "[0.7138087067604065, 0.735, 0.6996037750244141, 0.6489026327133178, 0.6639105467796326]\n"
+      "4001/4001 [==============================] - 1s 342us/step\n",
+      "[0.8393387658927953, 0.4978755311172207, 0.3108823398922837, 0.5014428458372315, 0.36749111691345965]\n"
      ]
     }
    ],
    "source": [
-    "loss_and_metrics = model.evaluate([x1_test, x2_test], y_test)\n",
+    "loss_and_metrics = model.evaluate([x1_test, x2_test, x3_test, x4_test, x5_test], y_test)\n",
     "print(loss_and_metrics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classes = model.predict([x1_test, x2_test])\n",
-    "np.savetxt('Mult_predict.csv', classes, delimiter = ',')"
    ]
   },
   {
@@ -452,10 +396,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = model.predict([x1_test, x2_test, x3_test, x4_test, x5_test])\n",
+    "#予測結果を保存して与えたデータと結合\n",
+    "columns = ['not publish', 'publish']\n",
+    "result = pd.DataFrame(classes, columns = columns)\n",
+    "test_data = use_data_s[15998:19999]\n",
+    "n_test_data = test_data.reset_index()\n",
+    "predict_result = n_test_data.join(result)\n",
+    "predict_result.drop(['user_id','tweet_id','tweet2', 'cos_day','sin_day', 'image_url', 'tag2', 'user_id2'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#予測結果の書き出し\n",
+    "predict_result.to_csv(\"result/O/result.csv\",index=False, sep=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "acc = history.history['acc']\n",
+    "val_acc = history.history['val_acc']\n",
+    "loss = history.history['loss']\n",
+    "val_loss = history.history['val_loss']\n",
+    "epochs = range(1, len(acc) + 1)\n",
+    "\n",
+    "plt.plot(epochs, acc, 'b--', label='Training acc')\n",
+    "plt.plot(epochs, val_acc, 'b', label='Validation acc')\n",
+    "plt.title('Training and validation accuracy')\n",
+    "plt.legend()\n",
+    "#plt.savefig(\"result/0/test_and_val_acc.png\")\n",
+    "\n",
+    "plt.figure()\n",
+    "\n",
+    "plt.plot(epochs, loss, 'b--', label='Training loss')\n",
+    "plt.plot(epochs, val_loss, 'b', label='Validation loss')\n",
+    "plt.title('Training and validation loss')\n",
+    "plt.legend()\n",
+    "#plt.savefig(\"result/O/test_and_val_loss.png\")\n",
+    "\n",
+    "plt.figure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax_acc = fig.add_subplot(111)\n",
+    "ax_acc.plot(epochs, val_acc, 'b--', label='Validation acc')\n",
+    "plt.legend(bbox_to_anchor=(0, 1), loc='upper left', borderaxespad=0.5, fontsize=10)\n",
+    "\n",
+    "ax_loss = ax_acc.twinx()\n",
+    "ax_loss.plot(epochs, val_loss, 'b', label='Validation loss')\n",
+    "plt.legend(bbox_to_anchor=(0, 0.9), loc='upper left', borderaxespad=0.5, fontsize=10)\n",
+    "plt.title('Validation acc and Validation loss')\n",
+    "ax_acc.set_xlabel('epochs')\n",
+    "ax_acc.set_ylabel('Validation acc')\n",
+    "ax_loss.grid(True)\n",
+    "ax_loss.set_ylabel('Validation loss')\n",
+    "#plt.savefig(\"result/O/val_acc_loss.png\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('Datas/model8_dO.h5')"
+   ]
   }
  ],
  "metadata": {
