--- a/model2/B_Model2.ipynb
+++ b/model2/B_Model2.ipynb
@@ -26,7 +26,8 @@
     "import keras.backend as K\n",
     "from functools import partial\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from keras.layers.normalization import BatchNormalization"
    ]
   },
   {
@@ -257,8 +258,9 @@
     "x = concatenate([d_lstm_out, d_i2], name='merge1')\n",
     "\n",
     "m2 = Dense(16, activation='relu', name = 'dence')(x)\n",
-    "#d_m2 = Dropout(0.5)(m2)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(x)\n",
+    "m2 = BatchNormalization()(m2)\n",
+    "d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
     "\n",
     "optimizer = Adam(lr=1e-4)\n",
     "model = Model(inputs=[p_input, i_input], outputs = output)\n",
@@ -359,27 +361,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "#予測\n",
     "classes = model.predict([x1_test, x2_test])\n",
-    "#予測結果を保存して与えたデータと結合\n",
-    "columns = ['not publish', 'publish']\n",
-    "result = pd.DataFrame(classes, columns = columns)\n",
-    "test_data = use_data_s[15998:19999]\n",
-    "n_test_data = test_data.reset_index()\n",
-    "predict_result = n_test_data.join(result)\n",
-    "predict_result.drop(['user_id','tweet_id','tweet2', 'cos_day','sin_day', 'image_url', 'tag2', 'user_id2'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#予測結果の書き出し\n",
     "predict_result.to_csv(\"result/B/result.csv\",index=False, sep=\",\")"
    ]
@@ -514,7 +501,7 @@
     }
    ],
    "source": [
-    "model.save('Datas/models/model1_dA.h5')"
+    "model.save('result/B/model2_dB.h5')"
    ]
   }
  ],
