--- a/model4/E_Model4.ipynb
+++ b/model4/E_Model4.ipynb
@@ -19,176 +19,14 @@
     "from keras.callbacks import EarlyStopping\n",
     "from keras.utils import plot_model\n",
     "import numpy as np\n",
+    "from keras.optimizers import Adam\n",
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
     "from keras.utils.np_utils import to_categorical\n",
     "import keras.backend as K\n",
-    "from functools import partial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000\n",
-      "10000\n"
-     ]
-    }
-   ],
-   "source": [
-    "#ツイートのテキスト読み込み\n",
-    "test = open(\"extract_tweet.txt\", \"r\", encoding=\"utf-8\")\n",
-    "lines = test.readlines()\n",
-    "test.close()\n",
-    "print(len(lines))\n",
-    "\n",
-    "#ラベル読み込み\n",
-    "test = open(\"label.txt\", \"r\", encoding=\"utf-8\")\n",
-    "label = test.readlines()\n",
-    "test.close()\n",
-    "print(len(label))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000\n"
-     ]
-    }
-   ],
-   "source": [
-    "#userID\n",
-    "test = open(\"user.txt\",\"r\", encoding=\"utf-8\")\n",
-    "uID = test.readlines()\n",
-    "test.close()\n",
-    "print(len(uID))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "id_list = []\n",
-    "for i in uID:\n",
-    "    if i in id_list:\n",
-    "        continue\n",
-    "    else:\n",
-    "        id_list.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(id_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "post_user = []\n",
-    "for i in uID:\n",
-    "    for j in range(len(id_list)):\n",
-    "        if i == id_list[j]:\n",
-    "            post_user.append(j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_postUser = np.array(post_user)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 18881 unique tokens.\n",
-      "Shape of data tensor:(10000, 50)\n",
-      "Shape of label tensor:(10000, 2)\n"
-     ]
-    }
-   ],
-   "source": [
-    "maxlen = 50\n",
-    "training_samples = 8000 # training data 80 : validation data 20\n",
-    "validation_samples = 1000\n",
-    "test_samples = len(lines) - (training_samples + validation_samples)\n",
-    "max_words = 20000\n",
-    "\n",
-    "# word indexを作成\n",
-    "tokenizer = Tokenizer(num_words=max_words)\n",
-    "tokenizer.fit_on_texts(lines)\n",
-    "sequences = tokenizer.texts_to_sequences(lines)\n",
-    "\n",
-    "word_index = tokenizer.word_index\n",
-    "print(\"Found {} unique tokens.\".format(len(word_index)))\n",
-    "\n",
-    "data = pad_sequences(sequences, maxlen=maxlen)\n",
-    "\n",
-    "# バイナリの行列に変換\n",
-    "categorical_labels = to_categorical(label)\n",
-    "labels = np.asarray(categorical_labels)\n",
-    "\n",
-    "print(\"Shape of data tensor:{}\".format(data.shape))\n",
-    "print(\"Shape of label tensor:{}\".format(labels.shape))\n",
-    "\n",
-    "#学習データとテストデータに分割\n",
-    "x1_test = data[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
-    "x2_test = n_postUser[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
-    "y_test = labels[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
-    "data = data[:training_samples + validation_samples]\n",
-    "labels = labels[:training_samples + validation_samples]\n",
-    "n_postUser = n_postUser[:training_samples + validation_samples]\n",
-    "\n",
-    "\n",
-    "# 行列をランダムにシャッフルする\n",
-    "indices = np.arange(data.shape[0])\n",
-    "np.random.shuffle(indices)\n",
-    "data = data[indices]\n",
-    "labels = labels[indices]\n",
-    "users = n_postUser[indices]\n",
-    "\n",
-    "x1_train = data[:training_samples]\n",
-    "x2_train = users[:training_samples]\n",
-    "y_train = labels[:training_samples]\n",
-    "x1_val = data[training_samples: training_samples + validation_samples]\n",
-    "x2_val = users[training_samples: training_samples + validation_samples]\n",
-    "y_val = labels[training_samples: training_samples + validation_samples]"
+    "from functools import partial\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -197,6 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import keras.backend as K\n",
+    "from functools import partial\n",
+    "\n",
     "def normalize_y_pred(y_pred):\n",
     "    return K.one_hot(K.argmax(y_pred), y_pred.shape[-1])\n",
     "\n",
@@ -265,7 +106,91 @@
     "def macro_f_measure(y_true, y_pred):\n",
     "    precision = macro_precision(y_true, y_pred)\n",
     "    recall = macro_recall(y_true, y_pred)\n",
-    "    return (2 * precision * recall) / (precision + recall + K.epsilon())"
+    "    return (2 * precision * recall) / (precision + recall + K.epsilon())\n",
+    "\n",
+    "def weight_variable(shape):\n",
+    "    return K.truncated_normal(shape, stddev = 0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000\n",
+      "10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#データの読み込み\n",
+    "use_data = pd.read_csv(filepath_or_buffer=\"multi_data.csv\", encoding=\"utf_8\", sep=\",\")\n",
+    "print(len(use_data))\n",
+    "use_data.info()\n",
+    "#NaNデータの0埋め\n",
+    "use_data = use_data.fillna('0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 18881 unique tokens.\n",
+      "Shape of data tensor:(10000, 50)\n",
+      "Shape of label tensor:(10000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxlen = 50\n",
+    "tag_maxlen = 10\n",
+    "train = 0.7\n",
+    "validation = 0.1\n",
+    "max_words = 20000\n",
+    "\n",
+    "#データをランダムにシャッフル\n",
+    "use_data_s = use_data.sample(frac=1, random_state=150)\n",
+    "\n",
+    "# word indexを作成\n",
+    "tokenizer = Tokenizer(num_words=max_words)\n",
+    "tokenizer.fit_on_texts(use_data_s['tweet2'])\n",
+    "sequences = tokenizer.texts_to_sequences(use_data_s['tweet2'])\n",
+    "\n",
+    "word_index = tokenizer.word_index\n",
+    "print(\"Found {} unique tokens.\".format(len(word_index)))\n",
+    "\n",
+    "data = pad_sequences(sequences, maxlen=maxlen)\n",
+    "\n",
+    "#user_idをnp行列に変換\n",
+    "post_user = np.array(use_data['user_id2'])\n",
+    "#sin,cosデータをまとめてnp行列へ\n",
+    "date = use_data_s[['cos_day','sin_day']]\n",
+    "p_date = date.values\n",
+    "\n",
+    "#ラベルをバイナリの行列に変換\n",
+    "categorical_labels = to_categorical(use_data_s['retweet'])\n",
+    "labels = np.asarray(categorical_labels)\n",
+    "\n",
+    "print(\"Shape of data tensor:{}\".format(data.shape))\n",
+    "print(\"Shape of label tensor:{}\".format(post_user.shape))\n",
+    "print(\"Shape of label tensor:{}\".format(labels.shape))\n",
+    "print(\"Shape of label tensor:{}\".format(p_date.shape))\n",
+    "\n",
+    "\n",
+    "indices = [int(len(labels) * n) for n in [train, train + validation]]\n",
+    "x1_train, x1_val, x1_test = np.split(data, indices)\n",
+    "x2_train, x2_val, x2_test = np.split(post_user, indices)\n",
+    "x3_train, x3_val, x3_test = np.split(p_date, indices)\n",
+    "y_train, y_val, y_test = np.split(labels, indices)"
    ]
   },
   {
@@ -317,7 +242,7 @@
     "#テキストの学習\n",
     "em = Embedding(input_dim=20000, output_dim=50, input_length=50, name='Embedding')(p_input)\n",
     "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32, name='LSTM')(d_em)\n",
+    "lstm_out = LSTM(32, kernel_initializer=weight_variable, name='LSTM')(d_em)\n",
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "#2つ目の入力\n",
     "i2 = Dense(16, activation='relu', name = 'dence1')(o1_input)\n",
@@ -333,7 +258,8 @@
     "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
     "\n",
     "model = Model(inputs=[p_input, o1_input, o2_input], outputs = output)\n",
-    "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
+    "optimizer = Adam(lr=1e-3)\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
     "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model4.png')\n",
     "\n",
@@ -362,10 +288,10 @@
     }
    ],
    "source": [
-    "history = model.fit([x1_train, x2_train], y_train,\n",
+    "history = model.fit([x1_train, x2_train, x3_train], y_train,\n",
     "                    epochs=100, \n",
-    "                    batch_size=100,\n",
-    "                    validation_data=([x1_val, x2_val], y_val),\n",
+    "                    batch_size=256,\n",
+    "                    validation_data=([x1_val, x2_val, x3_val], y_val),\n",
     "                    callbacks=[early_stopping])"
    ]
   },
@@ -384,18 +310,8 @@
     }
    ],
    "source": [
-    "loss_and_metrics = model.evaluate([x1_test, x2_test], y_test)\n",
+    "loss_and_metrics = model.evaluate([x1_test, x2_test, x3_test], y_test)\n",
     "print(loss_and_metrics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classes = model.predict([x1_test, x2_test])\n",
-    "np.savetxt('Mult_predict.csv', classes, delimiter = ',')"
    ]
   },
   {
@@ -420,10 +336,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = model.predict([x1_test, x2_test, x3_test])\n",
+    "#予測結果を保存して与えたデータと結合\n",
+    "columns = ['not publish', 'publish']\n",
+    "result = pd.DataFrame(classes, columns = columns)\n",
+    "test_data = use_data_s[15998:19999]\n",
+    "n_test_data = test_data.reset_index()\n",
+    "predict_result = n_test_data.join(result)\n",
+    "predict_result.drop(['user_id','tweet_id','tweet2', 'cos_day','sin_day', 'image_url', 'tag2', 'user_id2'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#予測結果の書き出し\n",
+    "predict_result.to_csv(\"result/E/result.csv\",index=False, sep=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "acc = history.history['acc']\n",
+    "val_acc = history.history['val_acc']\n",
+    "loss = history.history['loss']\n",
+    "val_loss = history.history['val_loss']\n",
+    "epochs = range(1, len(acc) + 1)\n",
+    "\n",
+    "plt.plot(epochs, acc, 'b--', label='Training acc')\n",
+    "plt.plot(epochs, val_acc, 'b', label='Validation acc')\n",
+    "plt.title('Training and validation accuracy')\n",
+    "plt.legend()\n",
+    "#plt.savefig(\"result/E/test_and_val_acc.png\")\n",
+    "\n",
+    "plt.figure()\n",
+    "\n",
+    "plt.plot(epochs, loss, 'b--', label='Training loss')\n",
+    "plt.plot(epochs, val_loss, 'b', label='Validation loss')\n",
+    "plt.title('Training and validation loss')\n",
+    "plt.legend()\n",
+    "#plt.savefig(\"result/E/test_and_val_loss.png\")\n",
+    "\n",
+    "plt.figure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax_acc = fig.add_subplot(111)\n",
+    "ax_acc.plot(epochs, val_acc, 'b--', label='Validation acc')\n",
+    "plt.legend(bbox_to_anchor=(0, 1), loc='upper left', borderaxespad=0.5, fontsize=10)\n",
+    "\n",
+    "ax_loss = ax_acc.twinx()\n",
+    "ax_loss.plot(epochs, val_loss, 'b', label='Validation loss')\n",
+    "plt.legend(bbox_to_anchor=(0, 0.9), loc='upper left', borderaxespad=0.5, fontsize=10)\n",
+    "plt.title('Validation acc and Validation loss')\n",
+    "ax_acc.set_xlabel('epochs')\n",
+    "ax_acc.set_ylabel('Validation acc')\n",
+    "ax_loss.grid(True)\n",
+    "ax_loss.set_ylabel('Validation loss')\n",
+    "#plt.savefig(\"result/E/val_acc_loss.png\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('Datas/model4_dE.h5')"
+   ]
   }
  ],
  "metadata": {
