--- a/model4/F_Model4.ipynb
+++ b/model4/F_Model4.ipynb
@@ -114,33 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20000\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 20000 entries, 0 to 19999\n",
-      "Data columns (total 14 columns):\n",
-      "screen_name    20000 non-null object\n",
-      "user_id        20000 non-null float64\n",
-      "tweet_id       20000 non-null float64\n",
-      "tweet          20000 non-null object\n",
-      "tweet2         20000 non-null object\n",
-      "postdate       20000 non-null object\n",
-      "cos_day        20000 non-null float64\n",
-      "sin_day        20000 non-null float64\n",
-      "tag            20000 non-null object\n",
-      "image_url      20000 non-null object\n",
-      "image          20000 non-null int64\n",
-      "retweet        20000 non-null float64\n",
-      "tag2           6063 non-null object\n",
-      "user_id2       20000 non-null int64\n",
-      "dtypes: float64(5), int64(2), object(7)\n",
-      "memory usage: 2.1+ MB\n"
+      "10000\n",
+      "10000\n"
      ]
     }
    ],
@@ -155,20 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 20620 unique tokens.\n",
-      "Shape of data tensor:(20000, 50)\n",
-      "Shape of label tensor:(20000, 10)\n",
-      "Shape of label tensor:(20000,)\n",
-      "Shape of label tensor:(20000,)\n",
-      "Shape of label tensor:(20000, 2)\n",
-      "Shape of label tensor:(20000, 2)\n"
+      "Found 18881 unique tokens.\n",
+      "Shape of data tensor:(10000, 50)\n",
+      "Shape of label tensor:(10000, 2)\n"
      ]
     }
    ],
@@ -185,48 +163,38 @@
     "# word indexを作成\n",
     "tokenizer = Tokenizer(num_words=max_words)\n",
     "tokenizer.fit_on_texts(use_data_s['tweet2'])\n",
-    "tokenizer.fit_on_texts(use_data_s['tag2'])\n",
     "sequences = tokenizer.texts_to_sequences(use_data_s['tweet2'])\n",
-    "sequences2 = tokenizer.texts_to_sequences(use_data_s['tag2'])\n",
     "\n",
     "word_index = tokenizer.word_index\n",
     "print(\"Found {} unique tokens.\".format(len(word_index)))\n",
     "\n",
     "data = pad_sequences(sequences, maxlen=maxlen)\n",
-    "t_data =  pad_sequences(sequences2, maxlen=tag_maxlen)\n",
     "\n",
     "#user_idをnp行列に変換\n",
     "post_user = np.array(use_data['user_id2'])\n",
     "#imageをnp行列に変換\n",
     "img = np.array(use_data['image'])\n",
-    "#sin,cosデータをまとめてnp行列へ\n",
-    "date = use_data_s[['cos_day','sin_day']]\n",
-    "p_date = date.values\n",
     "\n",
     "#ラベルをバイナリの行列に変換\n",
     "categorical_labels = to_categorical(use_data_s['retweet'])\n",
     "labels = np.asarray(categorical_labels)\n",
     "\n",
     "print(\"Shape of data tensor:{}\".format(data.shape))\n",
-    "print(\"Shape of label tensor:{}\".format(t_data.shape))\n",
     "print(\"Shape of label tensor:{}\".format(post_user.shape))\n",
-    "print(\"Shape of label tensor:{}\".format(img.shape))\n",
     "print(\"Shape of label tensor:{}\".format(labels.shape))\n",
-    "print(\"Shape of label tensor:{}\".format(p_date.shape))\n",
+    "print(\"Shape of label tensor:{}\".format(img.shape))\n",
     "\n",
     "\n",
     "indices = [int(len(labels) * n) for n in [train, train + validation]]\n",
     "x1_train, x1_val, x1_test = np.split(data, indices)\n",
-    "x2_train, x2_val, x2_test = np.split(t_data, indices)\n",
-    "x3_train, x3_val, x3_test = np.split(post_user, indices)\n",
-    "x4_train, x4_val, x4_test = np.split(img, indices)\n",
-    "x5_train, x5_val, x5_test = np.split(p_date, indices)\n",
+    "x2_train, x2_val, x2_test = np.split(post_user, indices)\n",
+    "x3_train, x3_val, x3_test = np.split(img, indices)\n",
     "y_train, y_val, y_test = np.split(labels, indices)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -238,50 +206,28 @@
       "==================================================================================================\n",
       "Input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "Input_tag (InputLayer)          (None, 10)           0                                            \n",
+      "Embedding (Embedding)           (None, 50, 50)       1000000     Input_postText[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "merge1 (Concatenate)            (None, 60)           0           Input_postText[0][0]             \n",
-      "                                                                 Input_tag[0][0]                  \n",
+      "Input_other1 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "Embedding (Embedding)           (None, 60, 60)       1200000     merge1[0][0]                     \n",
+      "Input_other2 (InputLayer)       (None, 2)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_1 (Dropout)             (None, 60, 60)       0           Embedding[0][0]                  \n",
+      "LSTM (LSTM)                     (None, 32)           10624       Embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "Input_id (InputLayer)           (None, 1)            0                                            \n",
+      "dence1 (Dense)                  (None, 16)           32          Input_other1[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "Input_image (InputLayer)        (None, 1)            0                                            \n",
+      "dence2 (Dense)                  (None, 16)           48          Input_other2[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "Input_postdate (InputLayer)     (None, 2)            0                                            \n",
+      "merge1 (Concatenate)            (None, 64)           0           LSTM[0][0]                       \n",
+      "                                                                 dence1[0][0]                     \n",
+      "                                                                 dence2[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "LSTM (LSTM)                     (None, 32)           11904       dropout_1[0][0]                  \n",
+      "dence (Dense)                   (None, 16)           1040        merge1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "user_dence (Dense)              (None, 16)           32          Input_id[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "image_dence (Dense)             (None, 16)           32          Input_image[0][0]                \n",
-      "__________________________________________________________________________________________________\n",
-      "pdate_dence (Dense)             (None, 16)           48          Input_postdate[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_2 (Dropout)             (None, 32)           0           LSTM[0][0]                       \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_3 (Dropout)             (None, 16)           0           user_dence[0][0]                 \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_4 (Dropout)             (None, 16)           0           image_dence[0][0]                \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_5 (Dropout)             (None, 16)           0           pdate_dence[0][0]                \n",
-      "__________________________________________________________________________________________________\n",
-      "merge2 (Concatenate)            (None, 80)           0           dropout_2[0][0]                  \n",
-      "                                                                 dropout_3[0][0]                  \n",
-      "                                                                 dropout_4[0][0]                  \n",
-      "                                                                 dropout_5[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 16)           1296        merge2[0][0]                     \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_6 (Dropout)             (None, 16)           0           dence[0][0]                      \n",
-      "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            34          dropout_6[0][0]                  \n",
+      "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
       "==================================================================================================\n",
-      "Total params: 1,213,346\n",
-      "Trainable params: 1,213,346\n",
+      "Total params: 1,011,778\n",
+      "Trainable params: 1,011,778\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -289,88 +235,81 @@
    ],
    "source": [
     "p_input = Input(shape=(50, ), dtype='int32', name='Input_postText')\n",
-    "t_input = Input(shape=(10, ), dtype='int32', name='Input_tag')\n",
-    "u_input = Input(shape=(1,), name='Input_id')\n",
-    "i_input = Input(shape=(1,), name='Input_image')\n",
-    "d_input = Input(shape=(2,), name='Input_postdate')\n",
+    "o1_input = Input(shape=(1, ), name='Input_other1')\n",
+    "o2_input = Input(shape=(1,), name='Input_other2')\n",
     "\n",
-    "#テキストとタグの学習\n",
-    "x = concatenate([p_input, t_input], name='merge1')\n",
-    "em = Embedding(input_dim=20620, output_dim=60, input_length=60, name='Embedding')(x)\n",
+    "#テキストの学習\n",
+    "em = Embedding(input_dim=20000, output_dim=50, input_length=50, name='Embedding')(p_input)\n",
     "d_em = Dropout(0.5)(em)\n",
     "lstm_out = LSTM(32, kernel_initializer=weight_variable, name='LSTM')(d_em)\n",
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
+    "#2つ目の入力\n",
+    "i2 = Dense(16, activation='relu', name = 'dence1')(o1_input)\n",
+    "d_i2 = Dropout(0.5)(i2)\n",
+    "#3つ目の入力\n",
+    "i3 = Dense(16, activation='relu', name = 'dence2')(o2_input)\n",
+    "d_i3 = Dropout(0.5)(i3)\n",
     "\n",
-    "#3つ目のデータ学習\n",
-    "user = Dense(16, activation='relu', name='user_dence')(u_input)\n",
-    "d_user = Dropout(0.5)(user)\n",
+    "x = concatenate([d_lstm_out, d_i2, d_i3], name='merge1')\n",
     "\n",
-    "#4つ目のデータ学習\n",
-    "image = Dense(16, activation='relu', name='image_dence')(i_input)\n",
-    "d_image = Dropout(0.5)(image)\n",
-    "\n",
-    "#5つ目のデータ学習\n",
-    "pdate = Dense(16, activation='relu', name='pdate_dence')(d_input)\n",
-    "d_pdate = Dropout(0.5)(pdate)\n",
-    "\n",
-    "x2 = concatenate([d_lstm_out, d_user, d_image, d_pdate], name='merge2')\n",
-    "m2 = Dense(16, activation='relu', name = 'dence')(x2)\n",
+    "m2 = Dense(16, activation='relu', name = 'dence')(x)\n",
     "d_m2 = Dropout(0.5)(m2)\n",
     "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
     "\n",
-    "model = Model(inputs=[p_input, t_input, u_input, i_input, d_input], outputs = output)\n",
+    "model = Model(inputs=[p_input, o1_input, o2_input], outputs = output)\n",
     "optimizer = Adam(lr=1e-3)\n",
     "model.compile(optimizer=optimizer, loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model8.png')\n",
+    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model4.png')\n",
+    "\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 14000 samples, validate on 1999 samples\n",
+      "Train on 8000 samples, validate on 1000 samples\n",
       "Epoch 1/100\n",
-      "14000/14000 [==============================] - 9s 612us/step - loss: 2.0583 - acc: 0.5002 - macro_precision: 0.5004 - macro_recall: 0.5003 - macro_f_measure: 0.5003 - val_loss: 1.1193 - val_acc: 0.4877 - val_macro_precision: 0.4718 - val_macro_recall: 0.4928 - val_macro_f_measure: 0.4815\n",
+      "8000/8000 [==============================] - 8s 1ms/step - loss: 0.6003 - acc: 0.7268 - macro_precision: 0.7489 - macro_recall: 0.7222 - macro_f_measure: 0.7350 - val_loss: 0.4566 - val_acc: 0.8110 - val_macro_precision: 0.8335 - val_macro_recall: 0.8022 - val_macro_f_measure: 0.8175\n",
       "Epoch 2/100\n",
-      "14000/14000 [==============================] - 7s 494us/step - loss: 1.8625 - acc: 0.5021 - macro_precision: 0.5019 - macro_recall: 0.5020 - macro_f_measure: 0.5019 - val_loss: 0.8218 - val_acc: 0.4797 - val_macro_precision: 0.4700 - val_macro_recall: 0.4835 - val_macro_f_measure: 0.4765\n",
+      "8000/8000 [==============================] - 6s 751us/step - loss: 0.3621 - acc: 0.8555 - macro_precision: 0.8587 - macro_recall: 0.8539 - macro_f_measure: 0.8562 - val_loss: 0.4077 - val_acc: 0.8250 - val_macro_precision: 0.8245 - val_macro_recall: 0.8234 - val_macro_f_measure: 0.8239\n",
       "Epoch 3/100\n",
-      "14000/14000 [==============================] - 7s 487us/step - loss: 1.5962 - acc: 0.5054 - macro_precision: 0.5055 - macro_recall: 0.5052 - macro_f_measure: 0.5054 - val_loss: 0.8340 - val_acc: 0.5083 - val_macro_precision: 0.5110 - val_macro_recall: 0.5021 - val_macro_f_measure: 0.4880\n",
+      "8000/8000 [==============================] - 6s 759us/step - loss: 0.2574 - acc: 0.8982 - macro_precision: 0.9005 - macro_recall: 0.8975 - macro_f_measure: 0.8990 - val_loss: 0.4473 - val_acc: 0.8120 - val_macro_precision: 0.8120 - val_macro_recall: 0.8110 - val_macro_f_measure: 0.8115\n",
       "Epoch 00003: early stopping\n"
      ]
     }
    ],
    "source": [
-    "history = model.fit([x1_train, x2_train, x3_train, x4_train, x5_train], y_train,\n",
+    "history = model.fit([x1_train, x2_train, x3_train], y_train,\n",
     "                    epochs=100, \n",
     "                    batch_size=256,\n",
-    "                    validation_data=([x1_val, x2_val, x3_val, x4_val, x5_val], y_val),\n",
+    "                    validation_data=([x1_val, x2_val, x3_val], y_val),\n",
     "                    callbacks=[early_stopping])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4001/4001 [==============================] - 1s 342us/step\n",
-      "[0.8393387658927953, 0.4978755311172207, 0.3108823398922837, 0.5014428458372315, 0.36749111691345965]\n"
+      "1000/1000 [==============================] - 1s 895us/step\n",
+      "[0.7138087067604065, 0.735, 0.6996037750244141, 0.6489026327133178, 0.6639105467796326]\n"
      ]
     }
    ],
    "source": [
-    "loss_and_metrics = model.evaluate([x1_test, x2_test, x3_test, x4_test, x5_test], y_test)\n",
+    "loss_and_metrics = model.evaluate([x1_test, x2_test, x3_test], y_test)\n",
     "print(loss_and_metrics)"
    ]
   },
@@ -400,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classes = model.predict([x1_test, x2_test, x3_test, x4_test, x5_test])\n",
+    "classes = model.predict([x1_test, x2_test, x3_test])\n",
     "#予測結果を保存して与えたデータと結合\n",
     "columns = ['not publish', 'publish']\n",
     "result = pd.DataFrame(classes, columns = columns)\n",
@@ -417,7 +356,7 @@
    "outputs": [],
    "source": [
     "#予測結果の書き出し\n",
-    "predict_result.to_csv(\"result/O/result.csv\",index=False, sep=\",\")"
+    "predict_result.to_csv(\"result/F/result.csv\",index=False, sep=\",\")"
    ]
   },
   {
@@ -438,7 +377,7 @@
     "plt.plot(epochs, val_acc, 'b', label='Validation acc')\n",
     "plt.title('Training and validation accuracy')\n",
     "plt.legend()\n",
-    "#plt.savefig(\"result/0/test_and_val_acc.png\")\n",
+    "#plt.savefig(\"result/F/test_and_val_acc.png\")\n",
     "\n",
     "plt.figure()\n",
     "\n",
@@ -446,7 +385,7 @@
     "plt.plot(epochs, val_loss, 'b', label='Validation loss')\n",
     "plt.title('Training and validation loss')\n",
     "plt.legend()\n",
-    "#plt.savefig(\"result/O/test_and_val_loss.png\")\n",
+    "#plt.savefig(\"result/F/test_and_val_loss.png\")\n",
     "\n",
     "plt.figure()"
    ]
@@ -470,7 +409,7 @@
     "ax_acc.set_ylabel('Validation acc')\n",
     "ax_loss.grid(True)\n",
     "ax_loss.set_ylabel('Validation loss')\n",
-    "#plt.savefig(\"result/O/val_acc_loss.png\")\n",
+    "#plt.savefig(\"result/E/val_acc_loss.png\")\n",
     "plt.show()"
    ]
   },
@@ -480,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('Datas/model8_dO.h5')"
+    "model.save('Datas/model4_dF.h5')"
    ]
   }
  ],
