--- a/model2/A_Model2.ipynb
+++ b/model2/A_Model2.ipynb
@@ -255,14 +255,14 @@
     "#テキストの学習\n",
     "em = Embedding(input_dim=20000, output_dim=50, input_length=50, name='Embedding')(p_input)\n",
     "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32, kernel_initializer=weight_variable , name='LSTM')(d_em)\n",
+    "lstm_out = LSTM(32, kernel_initializer=weight_variable , kernel_regularizer=regularizers.l1_l2(0.001), name='LSTM')(d_em)\n",
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "#2つ目のデータ学習\n",
-    "i2 = Dense(16, activation='elu', name = 'dence1')(i_input)\n",
+    "i2 = Dense(16, activation='elu',kernel_regularizer=regularizers.l1_l2(0.001),  name = 'dence1')(i_input)\n",
     "d_i2 = Dropout(0.5)(i2)\n",
     "x = concatenate([d_lstm_out, d_i2], name='merge1')\n",
     "\n",
-    "m2 = Dense(16, activation='elu', name = 'dence')(x)\n",
+    "m2 = Dense(16, activation='elu', kernel_regularizer=regularizers.l1_l2(0.001), name = 'dence')(x)\n",
     "m2 = BatchNormalization()(m2)\n",
     "d_m2 = Dropout(0.5)(m2)\n",
     "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
